--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo-google-fonts/azeret-mono": "^0.2.2",
     "@expo-google-fonts/inter": "^0.2.2",
+    "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-font": "~10.1.0",
     "expo-status-bar": "~1.3.0",
